--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^27.4.5",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.15",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "process": "^0.11.10"
   }
 }
