--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "test": "jest",
     "start": "node server.js",
-    "server": "nodemon"
+    "server": "nodemon",
+    "make": "npx knex migrate:make",
+    "rollback": "npx knex migrate:rollback",
+    "latest": "npx knex migrate:latest",
+    "up": "npx knex migrate:up",
+    "down": "npx knex migrate:down",
+    "make_seed": "npx knex seed:make",
+    "seed": "npx knex seed:run"
   },
   "repository": {
     "type": "git",
